--- a/JsonAnalytics/JsonAnalytics.csproj
+++ b/JsonAnalytics/JsonAnalytics.csproj
@@ -4,6 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <Nullable>disable</Nullable>
+        <LangVersion>9</LangVersion>
     </PropertyGroup>
 
 </Project>
